fix some visual bugs, remove arraynode, preview is collapsed by default

--- a/src/app/common/components/ExpandableView.less
+++ b/src/app/common/components/ExpandableView.less
@@ -15,11 +15,11 @@
   }
 
   .expandable-view-arrow-spacer-top {
-    flex: 1;
+    flex: 1 0 @half-spacing;
   }
 
   .expandable-view-arrow-spacer-bottom {
-    flex: 1;
+    flex: 1 0 0px;
     width: 1px;
     align-self: center;
     margin-top: @half-spacing;
