--- a/src/app/etl/templates/components/TemplateEditor.less
+++ b/src/app/etl/templates/components/TemplateEditor.less
@@ -1,7 +1,7 @@
 @import "../../../common/Common.less";
 
 @main-column-basis: 900px;
-@preview-column-basis: 600px;
+@preview-column-basis: 480px;
 @total-column-basis: @main-column-basis + @preview-column-basis + 64px;
 .template-editor-root-container {
   position: relative;
