--- a/src/app/etl/templates/components/TemplateEditorField.less
+++ b/src/app/etl/templates/components/TemplateEditorField.less
@@ -40,24 +40,6 @@
   }
 }
 
-// TemplateEditorFieldArrayNode
-.editor-array-children {
-  margin-bottom: @quarter-spacing;
-  .editor-array-seperator {
-    border-bottom: 1px solid #888;
-    .small-text;
-    display: inline-block;
-    margin: 0px @double-spacing;
-    margin-top: @quarter-spacing;
-    margin-bottom: -1px;
-    position: relative;
-  }
-  .editor-array-item {
-    padding: @half-spacing;
-    margin-left: @double-spacing;
-  }
-}
-
 @settings-height: 340px;
 @settings-margin-size: 2 * @double-spacing - 4px;
 @settings-extra-space: 2 * @settings-margin-size;
